# rayo-cli

./: .gitignore  README.md  pyproject.toml  test_cli.sh  test_json_parsing.py
docs/: PROMPTS.md
src/rayo/: __init__.py  __main__.py  cli.py  config.py
src/rayo/core/: __init__.py  agent.py  llm.py
src/rayo/prompts/: __init__.py  dynamic.py  system_prompt.md
src/rayo/tools/: __init__.py  base.py  fs_tools.py  sys_tools.py
